Adding new endpoint to start process instance and run
