# spiffworkflow-backend/src/spiffworkflow_backend/api.yml
@@ -3241,6 +3241,34 @@ paths:
               schema:
                 $ref: "#/components/schemas/ProcessModel"
 
+  /key/{process_model_identifier}/start:
+    parameters:
+      - name: process_model_identifier
+        in: path
+        required: true
+        description: The unique id of an existing process model.
+        schema:
+          type: string
+    post:
+      operationId: spiffworkflow_backend.routes.process_instances_controller.process_instance_start
+      summary: Creates and run process instance from a process model and returns the instance
+      tags:
+        - Process Instances
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: true
+      responses:
+        "201":
+          description: Workflow generated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Workflow"
+
 components:
   securitySchemes:
     oAuth2AuthCode:
